# SparkFun_Ublox_Arduino_Library

./: .gitignore  CONTRIBUTING.md  README.md  Theory.md  keywords.txt  library.properties
examples/Example10_AltitudeMSL/: Example10_AltitudeMSL.ino
examples/Example10_ResetConfiguration/: Example10_ResetConfiguration.ino
examples/Example11_UseUart/: Example11_UseUart.ino
examples/Example12_FactoryDefault2/: Example12_FactoryDefault2.ino
examples/Example12_FactoryDefaults/: Example12_FactoryDefaults.ino
examples/Example12_UseUart/: Example12_UseUart.ino
examples/Example13_AutoPVT/: Example13_AutoPVT.ino
examples/Example14_DebugOutput/: Example14_DebugOutput.ino
examples/Example14_GetDateTime/: Example14_GetDateTime.ino
examples/Example15_GetDateTime/: Example15_GetDateTime.ino
examples/Example16_AutoPVT_ExplicitUpdate/: Example16_AutoPVT_ExplicitUpdate.ino
examples/Example16_Nanosecond_MaxOutput/: Example16_Nanosecond_MaxOutput.ino
examples/Example17_Geofence/: Example17_Geofence.ino
examples/Example_Zephyr/: CMakeLists.txt
examples/Example_Zephyr/src/: main.c
linux/: CMakeLists.txt  README.md
linux/examples/: ublox_f9p_test.cpp
linux/inc/: Common.h  Print.h  Stream.h  Utils.h  Wire.h
linux/src/: Print.cpp  Utils.cpp
src/: SparkFun_Ublox_Arduino_Library (DESKTOP-271QFO7's conflicted copy 2018-09-07).h  SparkFun_Ublox_Arduino_Library.cpp  SparkFun_Ublox_Arduino_Library.h  SparkFun_Ublox_Zephyr_Library.cpp  SparkFun_Ublox_Zephyr_Library.h  u-blox_config_keys.h  u-blox_structs.h  ublox_lib_interface.cpp  ublox_lib_interface.h
(+97 files in other folders)
